@@ -30,16 +30,15 @@ dependencies {
     implementation("de.javagl:obj:0.4.0")
     implementation("mysql:mysql-connector-java:8.0.33")
     implementation("com.gluonhq:maps:2.0.0-ea+6")
+    implementation("org.json:json:20240303")
 }
 
 application {
     applicationDefaultJvmArgs = listOf("--enable-native-access=javafx.graphics")
-   // 👇 This is the class Gradle will launch for `./gradlew run`
     mainClass.set("app.Main")
 }
 
 tasks.named<JavaExec>("run") {
-    // These --add-opens flags are sometimes needed by JavaFX internals
     jvmArgs(
         "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
         "--add-opens", "javafx.graphics/com.sun.javafx.util=ALL-UNNAMED"
